[gd_scene load_steps=40 format=3 uid="uid://cdpt2glc4fool"]

[ext_resource type="PackedScene" uid="uid://bi4gkg0jvuf40" path="res://reel.tscn" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://s4qypbufbpci" path="res://scripts/cabinet.gd" id="1_h2yge"]
[ext_resource type="Texture2D" uid="uid://bcibag4xejsrw" path="res://assets/cabinet.png" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://tai3fqojad52" path="res://scripts/reel_set.gd" id="2_d13ii"]
[ext_resource type="Script" uid="uid://dolbb2wfgqwml" path="res://scripts/camera_2d.gd" id="4_efxa6"]
[ext_resource type="Texture2D" uid="uid://bq55abqg5bulv" path="res://assets/betbutton_notpressed.png" id="4_lquwl"]
[ext_resource type="Texture2D" uid="uid://btu6d8d6vcjl5" path="res://assets/betbutton_pressed.png" id="5_7mycd"]
[ext_resource type="Texture2D" uid="uid://bpl66ynx51gq1" path="res://assets/spinbutton_notpressed.png" id="6_272bh"]
[ext_resource type="Texture2D" uid="uid://cv0wfx2w6qvd6" path="res://assets/spinbutton_pressed.png" id="7_5vw27"]
[ext_resource type="Texture2D" uid="uid://bft2dnnmymry7" path="res://assets/paytablebutton_notpressed.png" id="8_kek77"]
[ext_resource type="Texture2D" uid="uid://b55enyoqfie70" path="res://assets/backtogamebutton_notpressed.png" id="9_4c57u"]
[ext_resource type="Texture2D" uid="uid://bq5kejyliwbs" path="res://assets/billinsert.png" id="10_4c57u"]
[ext_resource type="Script" uid="uid://82wiuhy8x4t3" path="res://scripts/credit_meter.gd" id="11_dg77c"]
[ext_resource type="Script" uid="uid://bbi17hyfp267w" path="res://scripts/bet_meter.gd" id="12_ycdy4"]
[ext_resource type="Script" uid="uid://dv80vhg1xtayu" path="res://scripts/win_meter.gd" id="13_w48qg"]
[ext_resource type="Script" uid="uid://dn2uuaeujwt7f" path="res://scripts/FiniteStateMachine.gd" id="15_2cqfq"]
[ext_resource type="Script" uid="uid://ccmcktr47q21j" path="res://scripts/idle_state.gd" id="16_yaehf"]
[ext_resource type="Script" uid="uid://dwj8qr601w4e6" path="res://scripts/playing_state.gd" id="17_yaehf"]
[ext_resource type="Script" uid="uid://bmtp58ej75kns" path="res://scripts/bet_increment_state.gd" id="18_074og"]
[ext_resource type="Texture2D" uid="uid://c6cpxcdfjanjm" path="res://assets/insertmoney.png" id="18_lswn8"]
[ext_resource type="Script" uid="uid://bc7hko7dqip7u" path="res://scripts/bill_insert_state.gd" id="19_cegan"]
[ext_resource type="Script" uid="uid://cb0k0a384l2p4" path="res://scripts/bonus_state.gd" id="20_82xsv"]
[ext_resource type="Script" uid="uid://cn8yl7eyehave" path="res://scripts/payout_state.gd" id="21_getpj"]
[ext_resource type="Script" uid="uid://bc40xx2oq0xq3" path="res://scripts/bank.gd" id="22_ryguw"]
[ext_resource type="Script" uid="uid://jc11tf8dumtu" path="res://scripts/startup_state.gd" id="23_1u8w0"]
[ext_resource type="Texture2D" uid="uid://c21cpie2h3cj4" path="res://assets/junkyard_jewels.png" id="24_0odxb"]
[ext_resource type="Texture2D" uid="uid://ctpru86mv4s1i" path="res://assets/bitdeserty_avatar_small.jpg" id="26_a6jrf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4c57u"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 0, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxa6"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 167, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg77c"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 334, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycdy4"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 501, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_w48qg"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 668, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_vivmo"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 835, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cqfq"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 1002, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaehf"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 1169, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_074og"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 1336, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_cegan"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 1503, 86, 167)

[sub_resource type="AtlasTexture" id="AtlasTexture_82xsv"]
atlas = ExtResource("10_4c57u")
region = Rect2(0, 1670, 86, 167)

[sub_resource type="SpriteFrames" id="SpriteFrames_getpj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4c57u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efxa6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg77c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycdy4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w48qg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vivmo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cqfq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaehf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_074og")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cegan")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_82xsv")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[node name="Cabinet" type="Node2D"]
script = ExtResource("1_h2yge")

[node name="ReelSet" type="Node" parent="."]
script = ExtResource("2_d13ii")

[node name="Reel1" parent="ReelSet" instance=ExtResource("1_0xm2m")]
position = Vector2(271, -155)

[node name="Reel2" parent="ReelSet" instance=ExtResource("1_0xm2m")]
position = Vector2(321, -155)

[node name="Reel3" parent="ReelSet" instance=ExtResource("1_0xm2m")]
position = Vector2(371, -155)

[node name="SlotGame" type="Node" parent="."]

[node name="FrameTexture" type="Sprite2D" parent="SlotGame"]
texture_filter = 3
position = Vector2(320, 212)
texture = ExtResource("1_ig7tw")

[node name="Camera2D" type="Camera2D" parent="SlotGame"]
position = Vector2(323, 213)
zoom = Vector2(1.835, 1.835)
position_smoothing_enabled = true
script = ExtResource("4_efxa6")

[node name="Buttons" type="Node" parent="."]

[node name="BetButton" type="Node" parent="Buttons"]

[node name="BetButton" type="TextureButton" parent="Buttons/BetButton"]
texture_filter = 3
offset_left = 172.0
offset_top = 252.0
offset_right = 252.0
offset_bottom = 300.0
texture_normal = ExtResource("4_lquwl")
texture_pressed = ExtResource("5_7mycd")

[node name="SpinButton" type="Node" parent="Buttons"]

[node name="SpinButton" type="TextureButton" parent="Buttons/SpinButton"]
texture_filter = 3
offset_left = 380.0
offset_top = 256.0
offset_right = 460.0
offset_bottom = 304.0
texture_normal = ExtResource("6_272bh")
texture_pressed = ExtResource("7_5vw27")

[node name="PaytableButton" type="Node" parent="Buttons"]

[node name="PaytableButton" type="TextureButton" parent="Buttons/PaytableButton"]
visible = false
texture_filter = 3
offset_left = 152.0
offset_top = 119.0
offset_right = 233.0
offset_bottom = 176.0
texture_normal = ExtResource("8_kek77")

[node name="BackToGameButton" type="Node" parent="Buttons"]

[node name="BackToGameButton" type="TextureButton" parent="Buttons/BackToGameButton"]
texture_filter = 3
offset_left = 149.0
offset_top = 45.0
offset_right = 246.0
offset_bottom = 96.0
texture_normal = ExtResource("9_4c57u")

[node name="BillInsert" type="Node" parent="Buttons"]

[node name="BillInsert" type="AnimatedSprite2D" parent="Buttons/BillInsert"]
texture_filter = 3
position = Vector2(272, 359)
sprite_frames = SubResource("SpriteFrames_getpj")
frame = 11
frame_progress = 1.0

[node name="BillInsertButton" type="TextureButton" parent="Buttons/BillInsert"]
offset_left = 269.0
offset_top = 273.0
offset_right = 277.0
offset_bottom = 281.0
scale = Vector2(7.44569, 2.85591)

[node name="CreditMeter" type="RichTextLabel" parent="."]
z_index = 1
texture_filter = 3
offset_left = 234.0
offset_top = 234.0
offset_right = 270.0
offset_bottom = 258.0
mouse_force_pass_scroll_events = false
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 15
text = "0000"
autowrap_mode = 0
shortcut_keys_enabled = false
horizontal_alignment = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
visible_characters_behavior = 4
script = ExtResource("11_dg77c")

[node name="BetMeter" type="RichTextLabel" parent="."]
z_index = 1
texture_filter = 3
offset_left = 308.0
offset_top = 234.0
offset_right = 344.0
offset_bottom = 258.0
mouse_force_pass_scroll_events = false
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 15
text = "0001"
autowrap_mode = 0
shortcut_keys_enabled = false
horizontal_alignment = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
visible_characters_behavior = 4
script = ExtResource("12_ycdy4")

[node name="WinMeter" type="RichTextLabel" parent="."]
z_index = 1
texture_filter = 3
offset_left = 387.0
offset_top = 233.0
offset_right = 423.0
offset_bottom = 257.0
mouse_force_pass_scroll_events = false
theme_override_colors/default_color = Color(1, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 15
text = "0000"
autowrap_mode = 0
shortcut_keys_enabled = false
horizontal_alignment = 2
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
visible_characters_behavior = 4
script = ExtResource("13_w48qg")

[node name="FSM" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("15_2cqfq")
initial_state = NodePath("StartupState")

[node name="IdleState" type="Node" parent="FSM"]
script = ExtResource("16_yaehf")

[node name="InsertBillTip" type="TextureRect" parent="FSM/IdleState"]
visible = false
z_index = 1
texture_filter = 3
offset_left = 302.0
offset_top = 231.0
offset_right = 403.0
offset_bottom = 309.0
texture = ExtResource("18_lswn8")

[node name="PlayingState" type="Node" parent="FSM"]
script = ExtResource("17_yaehf")

[node name="BetIncrementState" type="Node" parent="FSM"]
script = ExtResource("18_074og")

[node name="BillInsertState" type="Node" parent="FSM"]
script = ExtResource("19_cegan")

[node name="BonusState" type="Node" parent="FSM"]
script = ExtResource("20_82xsv")

[node name="PayoutState" type="Node" parent="FSM"]
script = ExtResource("21_getpj")

[node name="StartupState" type="Node" parent="FSM"]
script = ExtResource("23_1u8w0")

[node name="TitleSplash" type="TextureRect" parent="FSM/StartupState"]
texture_filter = 3
offset_left = 209.0
offset_top = 122.0
offset_right = 436.0
offset_bottom = 236.0
texture = ExtResource("24_0odxb")
expand_mode = 2

[node name="StudioSplash" type="TextureRect" parent="FSM/StartupState/TitleSplash"]
texture_filter = 3
offset_left = -51.0
offset_top = 115.0
offset_right = 182.0
offset_bottom = 346.0
scale = Vector2(0.291482, 0.280305)
texture = ExtResource("26_a6jrf")

[node name="Bank" type="Node" parent="."]
script = ExtResource("22_ryguw")

[connection signal="pressed" from="Buttons/PaytableButton/PaytableButton" to="." method="_on_paytable_button_released"]
[connection signal="pressed" from="Buttons/BackToGameButton/BackToGameButton" to="." method="_on_back_to_game_button_released"]
[connection signal="animation_finished" from="Buttons/BillInsert/BillInsert" to="FSM/BillInsertState" method="_on_bill_insert_animation_finished"]
